@@ -40,6 +40,7 @@ void test01()
   test_base io2;
   io1 = io2;
 }
-// { dg-error "within this context" "" { target *-*-* } 41 } 
+// { dg-error "synthesized" "" { target *-*-* } 41 } 
+// { dg-error "within this context" "" { target *-*-* } 34 } 
 // { dg-error "is private" "" { target *-*-* } 782 } 
 // { dg-error "operator=" "" { target *-*-* } 0 } 
